added code to user classes and updated uml

--- a/TarkovTracker/TarkovTracker/Pages/Index.cshtml
+++ b/TarkovTracker/TarkovTracker/Pages/Index.cshtml
@@ -2,10 +2,10 @@
 @model IndexModel
 @{
     ViewData["Title"] = "Home page";
+	
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-  
-    
+	<h1 class="display-4">Welcome</h1>
+	<p>@Model.TarkovTest</p>
 </div>
