--- a/TarkovTracker/TarkovTracker/Pages/Shared/_LoggedInLayout.cshtml
+++ b/TarkovTracker/TarkovTracker/Pages/Shared/_LoggedInLayout.cshtml
@@ -23,12 +23,18 @@
 			                <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
 		                </li>
 		                <li class="nav-item">
-			                <a class="nav-link text-dark" asp-area="" asp-page="/Login">Login</a>
+			                <a class="nav-link text-dark" asp-area="" asp-page="/Hideout">Hideout</a>
 		                </li>
 		                <li class="nav-item">
-			                <a class="nav-link text-dark" asp-area="" asp-page="/Register">register</a>
+			                <a class="nav-link text-dark" asp-area="" asp-page="/Quest">quest</a>
 		                </li>
-                        
+		                <li class="nav-item">
+			                <a class="nav-link text-dark" asp-area="" asp-page="/Hideout">hideout</a>
+		                </li>
+		                <li class="nav-item">
+			                <a class="nav-link text-dark" asp-area="" asp-page="/Logout">Logout</a>
+		                </li>
+                     
 	                </ul>
                 </div>
                 <div>
