--- a/TarkovTracker/TarkovTracker/Pages/Shared/_LoggedInLayout.cshtml
+++ b/TarkovTracker/TarkovTracker/Pages/Shared/_LoggedInLayout.cshtml
@@ -83,7 +83,7 @@
 	                        <a class="nav-link" asp-area="" asp-page="/Logout">Logout</a>
                         </li>
                         <li class="nav-item">
-	                        <a class="nav-link text-light" asp-page="/User/Quests">My Quests</a>
+	                        <a class="nav-link text-light" asp-page="/User/Quest">My Quests</a>
                         </li>
                         <li class="nav-item">
 	                        <a class="nav-link text-light" asp-page="/User/Hideout">My Hideout</a>
