--- a/TarkovTracker/TarkovTracker/Pages/Quest.cshtml
+++ b/TarkovTracker/TarkovTracker/Pages/Quest.cshtml
@@ -1,8 +1,12 @@
 ﻿@page
 @model TarkovTracker.Pages.quest.IndexModel
 @{
-	ViewData["Title"] = "Quests";
-	Layout = "_LoggedInLayout";
+	ViewData["Title"] = "Tarkov Tracker";
+	if (User.Identity.IsAuthenticated) Layout = "_LoggedInLayout";
+	else Layout = "_Layout";
+	var user = User;
+	ViewData["playername"] = user.Identity.IsAuthenticated ? user.Identity.Name : "Guest"; ;
+	ViewData["role"] = user.IsInRole("admin") ? "admin" : "user";
 }
 
 <h2>Quests</h2>
