--- a/TarkovTracker/TarkovTracker/Pages/Register.cshtml
+++ b/TarkovTracker/TarkovTracker/Pages/Register.cshtml
@@ -12,15 +12,25 @@
 
 <h2>Register</h2>
 
+@if (Model.Errors != null && Model.Errors.Any())
+{
+    <ul style="color:red">
+        @foreach (var error in Model.Errors)
+        {
+            <li>@error</li>
+        }
+    </ul>
+}
+
 <form method="post">
-	<input type="text" asp-for="UserDto.Username" placeholder="Username" />
-	<input type="number" asp-for="UserDto.Level" placeholder="Level" />
-	<input type="password" asp-for="UserDto.password" placeholder="Password" />
-	<select asp-for="UserDto.Faction">
-		<option value="USEC">USEC</option>
-		<option value="BEAR">BEAR</option>
-	</select>
-	<input type="text" asp-for="UserDto.role" placeholder="Role" />
-	<input type="submit" value="Add User" asp-page-handler="Add" />
+    <input type="text" asp-for="UserDto.Username" placeholder="Username" />
+    <input type="number" asp-for="UserDto.Level" placeholder="Level" />
+    <input type="password" asp-for="UserDto.password" placeholder="Password" />
+    <select asp-for="UserDto.Faction">
+        <option value="USEC">USEC</option>
+        <option value="BEAR">BEAR</option>
+    </select>
+    <input type="text" asp-for="UserDto.role" placeholder="Role" />
+    <input type="submit" value="Add User" asp-page-handler="Add" />
 </form>
 
